--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+*.pyo
+
+# Visual code files
+.vscode/
+*.json
 
 # C extensions
 *.so
@@ -127,3 +133,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Credentials
+credentials.*
