--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,33 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-*.json
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # C extensions
 *.so
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+dist
+trash
 
 # Distribution / packaging
 .Python
