--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,8 +15,10 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-select": "^3.0.8",
