--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
