--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-api": "cd ../back-end && flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test"
   },
