--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "browserify-css": "^0.15.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.7",
